--- a/PerformanceEvaluationSystem/App.config
+++ b/PerformanceEvaluationSystem/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name ="ConStr" connectionString="Data Source = 127.0.0.1; database = PerformanceDB; uid = sa; pwd = 123"/>
+		<add name ="ConStr" connectionString="Data Source = (LocalDb)\MSSQLLocalDB; database = PerformanceDB; uid = sa; pwd = 123"/>
 	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
