--- a/PerformanceEvaluationSystem/PerformanceEvaluationSystem.csproj
+++ b/PerformanceEvaluationSystem/PerformanceEvaluationSystem.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBaseManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBaseManager.Designer.cs">
+      <DependentUpon>FormBaseManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSetUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormBaseManager.resx">
+      <DependentUpon>FormBaseManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormSetUser.resx">
       <DependentUpon>FormSetUser.cs</DependentUpon>
     </EmbeddedResource>
