--- a/PerformanceEvaluationSystem/PerformanceEvaluationSystem.csproj
+++ b/PerformanceEvaluationSystem/PerformanceEvaluationSystem.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\FormFactory.cs" />
     <Compile Include="FormBaseManager.cs">
       <SubType>Form</SubType>
     </Compile>
