--- a/System.Models/PerformanceEvaluationSystem.Models.csproj
+++ b/System.Models/PerformanceEvaluationSystem.Models.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppraisalBases.cs" />
+    <Compile Include="AppraisalCoefficients.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAppraisalBases.cs" />
     <Compile Include="Users.cs" />
