--- a/System.Models/PerformanceEvaluationSystem.Models.csproj
+++ b/System.Models/PerformanceEvaluationSystem.Models.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AppraisalCoefficients.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAppraisalBases.cs" />
+    <Compile Include="UserAppraisalCoefficients.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
