--- a/System.Models/PerformanceEvaluationSystem.Models.csproj
+++ b/System.Models/PerformanceEvaluationSystem.Models.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAppraisalBases.cs" />
     <Compile Include="UserAppraisalCoefficients.cs" />
+    <Compile Include="UserAppraisals.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
